Adds lead to nn

--- a/Cervan_Renz_MirandaSousa_19-660-018.Rmd
+++ b/Cervan_Renz_MirandaSousa_19-660-018.Rmd
@@ -1180,6 +1180,8 @@ For INSURED_VALUE, the number of claims decreases with the insured value, indica
 For PREMIUM, the number of claims increases with the premium amount, starting in negative for the cheapest premium values, probably related to the insurance type and the insured value. After that, the number of claims increases with the premium amount, indicating that higher premiums are associated with more claims. This could be due to higher premiums for higher-risk drivers or vehicles or simply due to the increased value of the insured vehicles and the related need to keep it in good condition, making smaller defects a claim, which would not be claimed in cheaper vehicles.
 
 ## Neural Network
+*Lead: Alvaro Cervan*
+
 
 A neural network model is fitted to predict the premium amount based on the characteristics of the insured vehicles and the driver. The model is trained using the cleaned and transformed data, and the results are analyzed to evaluate the model's performance.
 
